# stealth-agent

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: STEALTH.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/ai/: client.rs  context.rs  mod.rs
src-tauri/src/audio/: capture.rs  mod.rs  transcribe.rs
src-tauri/src/screen/: capture.rs
src-tauri/src/stealth/: focus.rs  macos.rs  mod.rs  process.rs  screen_share.rs  windows.rs
src/components/: ChatBox.tsx  Settings.tsx  TranscriptView.tsx
src/hooks/: useAI.ts  useAudio.ts  useShortcuts.ts
src/stores/: appStore.ts
