[package]
name = "invisible-agent"
version = "0.1.0"
description = "Invisible Interview Assistant"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
anyhow = "1"
cpal = "0.15"
hound = "3.5"
bytemuck = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread", "NSArray"] }
objc2-app-kit = { version = "0.3", features = [
    "NSWindow",
    "NSPanel",
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSScreen",
    "NSGraphics",
    "NSWindowScripting",
] }
screencapturekit = "0.2"
screencapturekit-sys = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
